syntax = "proto3";

option java_multiple_files = true;
option java_package = "print";
option java_outer_classname = "printImpl";

package capacity;

// Client will request a string representation from the cloud
message printRequest{
	bool print = 1;
}

// A string representation of whatever is stored in the cloud will be returned as a response (including current size)
message printResponse{
	string printing = 1;
}


service printService{

	//Server streaming API
	rpc print(printRequest) returns (stream printResponse){};
	
}


